--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./cep.css">
-    <link rel="stylesheet" href="./cep.js">
+    <script src="./cep.js" defer></script>
     <title>Busca CEP</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
           type="text"
           id="cep"
           name="cep"
-          placeholder="Digite seu CEP"
+          placeholder="CEP apenas números"
           required
         />
         <button type="submit" name="submit">Consultar</button>
