--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
       <h1 id="logo">Busca CEP</h1>
       <form>
         <label for="cep">CEP</label>
-        <input
+        <input onclick="cepsPesquisados"
           type="text"
           id="cep"
           name="cep"
+          value=""
           placeholder="CEP apenas números"
           required
         />
-        <button type="submit" name="submit">Consultar</button>
+        <button type="submit" name="submit" >Consultar</button>
       </form>
       <section class="center">
         <ul id="result"></ul>
